# asklio-backend

./: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
src/: db.py  main.py  mock_data.py  models.py  setup.py
src/models/: db.py  dto.py
src/utils/: commodity_group_ai.py  extract_pdf.py  llm.py
